Navbar icon fix: MASTER

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
       <div id="navBar" class="nav-wrapper">
         <img id="logo" src="./images/Sensify_edited-4_copy.png" alt="logo" class="responsive-img">
         <a href="#!" id="brand" class="brand-logo center">Sensify</a>
+
+        <ul class="right">
+          <li>
+            <a href="./aboutus.html" class="right groupFix"><i class="material-icons">group</i></a>
+          </li>
+        </ul>
         <!-- <ul id="navLinks" class="right" id="aboutStyle">
           <li><a id="about" href="./aboutus.html">About</a></li>
           <i class="medium material-icons" id="groupIcon">group</i>
@@ -185,7 +191,7 @@
         will give you a Spotify playlist to listen to. Get a taste of the songs with lyrics provided and enjoy Sensify,
         the
         music app that senses where you are!</h3>
-      
+
       <i class="medium material-icons">music_note</i>
       <!-- <div class="row">
         <div class="col s12 m12">
