--- a/aboutus.html
+++ b/aboutus.html
@@ -30,7 +30,7 @@
         <div id="navBar" class="nav-wrapper">
           <a href="#!" id="brand" class="brand-logo center">Sensify</a>
           <ul id="navLinks" class="right">
-            <li><a id="about" href="./index.html">Home</a></li>
+            <li><a href="./index.html"><i class="material-icons">home</i></a></li>
           </ul>
         </div>
       </nav>
