--- a/aboutus.html
+++ b/aboutus.html
@@ -18,15 +18,6 @@
     <!-- Material icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<<<<<<< HEAD
-  <div class= "card-panel">
-  <!-- <div class="row"> -->
-    <div class="col s12 m7">
-      <div class="card">
-        <div class="card-image">
-          <img src="images/sample-1.jpg">
-          <span class="card-title">Card Title</span>
-=======
     <!-- Weather icons -->
     <link rel="stylesheet" href="./assets/weather-icons.min.css">
   
@@ -41,7 +32,6 @@
           <ul id="navLinks" class="right">
             <li><a id="about" href="./index.html">Home</a></li>
           </ul>
->>>>>>> bca19e02775469b0e14b27bd47fcccf73caaf7a7
         </div>
       </nav>
     </header>
@@ -57,7 +47,7 @@
 
     <section class="row center-align">
       <div class="col s12 m4 cols">
-        <div class="card idCards">
+        <div class="card idCards" id="us">
           <div class="card-image">
             <img class="cropped" src="./images/daniellehillman.jpg" alt="Danielle Hillman">
           </div>
@@ -71,7 +61,7 @@
         </div>
       </div>
       <div class="col s12 m4 cols">
-        <div class="card idCards">
+        <div class="card idCards" id="us">
           <div class="card-image">
             <img class="cropped" src="./images/Adam.jpg" alt="Adam Madueno">
           </div>
@@ -84,17 +74,8 @@
           </div>
         </div>
       </div>
-<<<<<<< HEAD
-    </div>
-  
-    <div class="col s12 m7">
-      <div class="card">
-        <div class="card-image">
-          <img src="images/sample-1.jpg">
-          <span class="card-title">Card Title</span>
-=======
       <div class="col s12 m4 cols">
-        <div class="card idCards">
+        <div class="card idCards" id="us">
           <div class="card-image">
             <img class="cropped" src="./images/mattjavier.jpg" alt="Matthew Javier">
           </div>
@@ -105,14 +86,13 @@
           <div id="cardLinks" class="card-action center-align">
             <a href="https://mattjavier.github.io">Portfolio</a>
           </div>
->>>>>>> bca19e02775469b0e14b27bd47fcccf73caaf7a7
         </div>
       </div>
     </section>
     <section class="row center-align">
       <div class="col offset-m2"></div>
       <div class="col s12 m4 cols">
-        <div class="card idCards">
+        <div class="card idCards" id="us">
           <div class="card-image">
             <img class="cropped" src="./images/Daniel-Le.JPG" alt="Daniel Le">
           </div>
@@ -126,7 +106,7 @@
         </div>
       </div>
       <div class="col s12 m4 cols">
-        <div class="card idCards">
+        <div class="card idCards" id="us">
           <div class="card-image">
             <img class="cropped" src="./images/danielayala.jpg" alt="Daniel Ayala">
           </div>
@@ -139,67 +119,6 @@
           </div>
         </div>
       </div>
-<<<<<<< HEAD
-    </div>
-  
-
-<!-- </div> -->
-</div>
-
-
-
-
-
-<main class="card-deck">
-  <section class="card" style="width: 18rem;">
-      <!-- <img class="card-img-top" src="https://www.stockvault.net/data/2016/11/20/216415/preview16.jpg" alt="Card image"> -->
-      <div class="card-body">
->
-        <hr class="light">
-        <p class="card-text">Since I have not worked on many projects, attached is our first homework assignment.</p>
-        <hr class="light">
-        <!-- <a href="https://daniellehillman.github.io/coderefractor/" target="_blank" class="card-link">Link to Project</a> -->
-
-      </div>
-      
-    </section>
-    <!-- card for project 2  -->
-    <section class="card" style="width: 18rem;">
-      <img class="card-img-top" src="https://www.stockvault.net/data/2016/11/20/216415/preview16.jpg" alt="Card image">
-      <div class="card-body">
-        <h5 class=" card-title card-img-overlay">Project 2</h5>
-        <h6 class="card-subtitle">This will be project 2</h6>
-        <hr class="light">
-        <p class="card-text">Attached will be another project in the future with a link below.</p>
-        <hr class="light">
-        <!-- Will link other projects once I finish them -->
-        <!-- <a href="#" class="card-link">Card link</a> -->
-        
-      </div>
-    </section>
-    <!-- card for project 3  -->
-    <section class="card" style="width: 18rem;">
-      <img class="card-img-top" src="https://www.stockvault.net/data/2016/11/20/216415/preview16.jpg" alt="Card image">
-      <div class="card-body">
-        <h5 class="card-title card-img-overlay">Project 3</h5>
-        <h6 class="card-subtitle">This will be project 3</h6>
-        <hr class="light">
-        <p class="card-text">Attached will be another project in the future with a link below.</p>
-        <hr class="light">
-        <!-- Will link other projects once I finish them -->
-        <!-- <a href="#" class="card-link">Card link</a> -->
-  
-      </div>
-    </section>
-  </main> 
-
-
-</div>
-</div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="./script.js"></script>
-</body>
-=======
       <div class="col offset-m2"></div>
     </section>
     <footer id="footer" class="page-footer">
@@ -227,7 +146,6 @@
 
     <!-- Materialize cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
->>>>>>> bca19e02775469b0e14b27bd47fcccf73caaf7a7
 
     <!-- main script -->
     <!-- <script src="./script.js"></script> -->
