--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 <body>
   <header id="header" class="row">
     <nav>
-      <div id="navBar" class="nav-wrapper">
+      <header id="navBar" class="nav-wrapper">
         <img id="logo" src="./images/Sensify_edited-4_copy.png" alt="logo" class="responsive-img">
         <a href="#!" id="brand" class="brand-logo center">Sensify</a>
         <!-- <ul id="navLinks" class="right" id="aboutStyle">
           <li><a id="about" href="./aboutus.html">About</a></li>
           <i class="medium material-icons" id="groupIcon">group</i>
         </ul> -->
-      </div>
+      </header>
     </nav>
   </header>
   <main class="row">
@@ -50,16 +50,16 @@
       <form id="form">
 
         <!-- input name -->
-        <div class="input-field center-align">
+        <section class="input-field center-align">
           <input type="text" name="name" id="name" class="validate">
           <label for="name" id="nameLabel">Name</label>
-        </div>
+        </section>
 
         <!-- find location or manually input city -->
-        <div class="input-field center-align">
+        <section class="input-field center-align">
           <input type="text" name="city" id="city" class="validate">
           <label for="city" id="cityLabel">City</label>
-        </div>
+        </section>
         <div class="center-align">
           <button id="find-me" class="btn-large waves-effect allBtns">Find My Location</button>
           <p id="status"></p>
@@ -70,7 +70,7 @@
         <div class="center-align">
           <label for="city" id="moodLabel">Please enter your mood: </label>
         </div>
-        <div id="radioWrapper" class="center-left">
+        <section id="radioWrapper" class="center-left">
           <p>
             <label for="happy">
               <input class="mood" type="radio" name="moodChoice" value="0" id="happy">
@@ -101,7 +101,7 @@
               <span>Hyped</span>
             </label>
           </p>
-        </div>
+        </section>
         <div id="submitWrapper" class="center-align">
           <button id="submitBtn" class="btn-large waves-effect allBtns">Submit</button>
         </div>
@@ -111,64 +111,64 @@
 
     <!-- all lyric modals, hidden until triggered-->
     <section id="lyricsModal1" class="modal">
-      <div class="modal-content">
+      <article class="modal-content">
         <h4 id="song1" class="songTitles"></h4>
         <p id="lyrics1" class="lyrics"></p>
-      </div>
+      </article>
     </section>
     <section id="lyricsModal2" class="modal">
-      <div class="modal-content">
+      <article class="modal-content">
         <h4 id="song2" class="songTitles"></h4>
         <p id="lyrics2" class="lyrics"></p>
-      </div>
+      </article>
     </section>
     <section id="lyricsModal3" class="modal">
-      <div class="modal-content">
+      <article class="modal-content">
         <h4 id="song3" class="songTitles"></h4>
         <p id="lyrics3" class="lyrics"></p>
-      </div>
+      </article>
     </section>
     <section id="lyricsModal4" class="modal">
-      <div class="modal-content">
+      <article class="modal-content">
         <h4 id="song4" class="songTitles"></h4>
         <p id="lyrics4" class="lyrics"></p>
-      </div>
+      </article>
     </section>
     <section id="lyricsModal5" class="modal">
-      <div class="modal-content">
+      <article class="modal-content">
         <h4 id="song5" class="songTitles"></h4>
         <p id="lyrics5" class="lyrics"></p>
-      </div>
+      </article>
     </section>
     <section id="lyricsModal6" class="modal">
-      <div class="modal-content">
+      <article class="modal-content">
         <h4 id="song6" class="songTitles"></h4>
         <p id="lyrics6" class="lyrics"></p>
-      </div>
+      </article>
     </section>
     <section id="lyricsModal7" class="modal">
-      <div class="modal-content">
+      <article class="modal-content">
         <h4 id="song7" class="songTitles"></h4>
         <p id="lyrics7" class="lyrics"></p>
-      </div>
+      </article>
     </section>
     <section id="lyricsModal8" class="modal">
-      <div class="modal-content">
+      <article class="modal-content">
         <h4 id="song8" class="songTitles"></h4>
         <p id="lyrics8" class="lyrics"></p>
-      </div>
+      </article>
     </section>
     <section id="lyricsModal9" class="modal">
-      <div class="modal-content">
+      <article class="modal-content">
         <h4 id="song9" class="songTitles"></h4>
         <p id="lyrics9" class="lyrics"></p>
-      </div>
+      </article>
     </section>
     <section id="lyricsModal10" class="modal">
-      <div class="modal-content">
+      <article class="modal-content">
         <h4 id="song10" class="songTitles"></h4>
         <p id="lyrics10" class="lyrics"></p>
-      </div>
+      </article>
     </section>
 
     <!-- Show weather data for the city/current location -->
