added simantec elements to index.html

--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
 
     <!-- Show weather data for the city/current location -->
     <section id="weather" class="col s12 m6 l6 center-align">
-      <div class="row">
+      <aside class="row">
         <p id="currentCity"></p>
         <div class="col s12 m12">
           <div id="forecast" class="card">
           </div>
         </div>
-      </div>
+      </aside>
       <h3 class="rightText">Sensify is a mobile web application built for you. Listen to music based on your location.
         Tell us where you are and we
         will give you a Spotify playlist to listen to. Get a taste of the songs with lyrics provided and enjoy Sensify,
@@ -202,23 +202,23 @@
     </section>
   </main>
   <footer id="footer" class="page-footer footerStyle">
-    <div id="footerLinks" class="container">
-      <div class="row">
+    <details id="footerLinks" class="container">
+      <section class="row">
         <div class="col s12 center-align footerCol">
           <span id="codeIcon" class="material-icons">
             code
           </span>
         </div>
-        <div class="col s12 center-align footerCol">
+        <footer class="col s12 center-align footerCol">
           <a id="githubLink" href="https://github.com/daniellehillman/Group1/tree/master">GitHub</a>
-        </div>
-      </div>
-    </div>
-    <div id="footerCopyright" class="footer-copyright center-align">
+        </footer>
+      </section>
+    </details>
+    <footer id="footerCopyright" class="footer-copyright center-align">
       <div id="copyright" class="container">
         © 2020 Sensify
       </div>
-    </div>
+    </footer>
   </footer>
   <!-- jQuery if needed -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
