fixed footer id

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </section>
   </main>
   <footer id="footer" class="page-footer footerStyle">
-    <details id="footerLinks" class="container">
+    <div id="footerLinks" class="container">
       <section class="row">
         <div class="col s12 center-align footerCol">
           <span id="codeIcon" class="material-icons">
@@ -213,7 +213,7 @@
           <a id="githubLink" href="https://github.com/daniellehillman/Group1/tree/master">GitHub</a>
         </footer>
       </section>
-    </details>
+    </div>
     <footer id="footerCopyright" class="footer-copyright center-align">
       <div id="copyright" class="container">
         © 2020 Sensify
