--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <ul class="right">
           <li>
-            <a href="./aboutus.html" class="right groupFix"><i class="material-icons">group</i></a>
+            <a href="./aboutus.html" class="right"><i class="material-icons">group</i></a>
           </li>
         </ul>
         <!-- <ul id="navLinks" class="right" id="aboutStyle">
