--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 </head>
 
 <body>
+  <div id="pageWrapper">
+
   <header id="header" class="row">
     <nav>
       <div id="navBar" class="nav-wrapper">
@@ -201,6 +203,7 @@
       </div> -->
     </section>
   </main>
+  </div>
   <footer id="footer" class="page-footer footerStyle">
     <div id="footerLinks" class="container">
       <div class="row">
