button and nav fix

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav>
       <div id="navBar" class="nav-wrapper">
         <img id="logo" src="./images/Sensify_edited-4_copy.png" alt="logo" class="responsive-img">
-        <a href="#!" id="brand" class="brand-logo center">Sensify</a>
+        <a href="./index.html" id="brand" class="brand-logo center">Sensify</a>
 
         <ul class="right">
           <li>
