--- a/aboutus.html
+++ b/aboutus.html
@@ -28,7 +28,8 @@
     <header id="header" class="row">
       <nav>
         <div id="navBar" class="nav-wrapper">
-          <a href="#!" id="brand" class="brand-logo center">Sensify</a>
+          <img id="logo" src="./images/Sensify_edited-4_copy.png" alt="logo" class="responsive-img">
+          <a href="./index.html" id="brand" class="brand-logo center">Sensify</a>
           <ul id="navLinks" class="right">
             <li><a href="./index.html"><i class="material-icons">home</i></a></li>
           </ul>
