Day 4 End of Class changes

--- a/aboutus.html
+++ b/aboutus.html
@@ -40,7 +40,7 @@
 
     <section class="row center-align">
       <div class="col s12">
-        <img src="./images/logo.png" style="width: 100px;">
+        <img src="./images/Sensify_edited-4_copy.png" style="width: 100px;">
       </div>
       <div class="col s12">
         <h1 id="aboutTitle">Meet the Team</h1>
@@ -54,7 +54,7 @@
             <img class="cropped" src="./images/daniellehillman.jpg" alt="Danielle Hillman">
           </div>
           <div class="card-content cardTags center-align">
-            <p>Hi, I'm Danielle.</p>
+            <p class="bioText">Hi, I'm Danielle.</p>
           </div>
           <hr>
           <div id="cardLinks" class="card-action center-align">
@@ -68,7 +68,7 @@
             <img class="cropped" src="./images/Adam.jpg" alt="Adam Madueno">
           </div>
           <div class="card-content cardTags center-align">
-            <p>Hi, I'm Adam.</p>
+            <p class="bioText">Hi, I'm Adam.</p>
           </div>
           <hr>
           <div id="cardLinks" class="card-action center-align">
@@ -82,7 +82,7 @@
             <img class="cropped" src="./images/mattjavier.jpg" alt="Matthew Javier">
           </div>
           <div class="card-content cardTags center-align">
-            <p>Hi, I'm Matt.</p>
+            <p class="bioText">Hi, I'm Matt.</p>
           </div>
           <hr>
           <div id="cardLinks" class="card-action center-align">
@@ -99,7 +99,7 @@
             <img class="cropped" src="./images/Daniel-Le.JPG" alt="Daniel Le">
           </div>
           <div class="card-content cardTags center-align">
-            <p>Hi, I'm Daniel.</p>
+            <p class="bioText">Hi, I'm Daniel.</p>
           </div>
           <hr>
           <div id="cardLinks" class="card-action center-align">
@@ -113,7 +113,7 @@
             <img class="cropped" src="./images/danielayala.jpg" alt="Daniel Ayala">
           </div>
           <div class="card-content cardTags center-align">
-            <p>Hi, I'm Daniel.</p>
+            <p class="bioText">Hi, I'm Daniel.</p>
           </div>
           <hr>
           <div id="cardLinks" class="card-action center-align">
