--- a/aboutus.html
+++ b/aboutus.html
@@ -27,12 +27,12 @@
   <body>
     <header id="header" class="row">
       <nav>
-        <div id="navBar" class="nav-wrapper">
+        <section id="navBar" class="nav-wrapper">
           <a href="#!" id="brand" class="brand-logo center">Sensify</a>
           <ul id="navLinks" class="right">
             <li><a href="./index.html"><i class="material-icons">home</i></a></li>
           </ul>
-        </div>
+        </section>
       </nav>
     </header>
 
